--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         
     </style>
-    <script src="http://lint.page/kit/21b912.js" crossorigin="anonymous"></script>
+    <script src="https://lint.page/kit/21b912.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
