--- a/itsc1110/index.html
+++ b/itsc1110/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haylee Hauser's Hungry Hippo | ITSC1110 | Home</title>
     <link rel="stylesheet" href="styles/default.css">
-    <script src="http://lint.page/kit/21b912.js" crossorigin="anonymous"></script>
+    <script src="https://lint.page/kit/21b912.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Haylee Hauser's Hungry Hippo &#127857;&#129435; ITSC1110</h1>
-        <nav><a href="index.html">Home</a> | <a href="introduction.html">Introduction</a> | <a href="contract.html">Contract</a></nav>
+        <nav><a href="index.html">Home</a> | <a href="introduction.html">Introduction</a> | <a href="aiintroduction.html">AI Introduction</a> | <a href="contract.html">Contract</a></nav>
     </header>
     <main>
         <h2>Home</h2>
