--- a/itsc1110/aiintroduction.html
+++ b/itsc1110/aiintroduction.html
@@ -48,6 +48,20 @@
         
         <p><strong>I'd also like to Share:</strong></p>
         <p>In high school, I played soccer and football, and I was a proud member of the robotics team.</p>
+
+        <p><strong>AI Prompt: </strong>Rewrite this: Personal Background: I was born and raised in Charlotte, North Carolina. I have an orange cat that I spoil as much as I can. 
+            Professional Background: I spent four years working in a tire shop, where I changed and sold tires. Now, I’m approaching my three year work anniversary with Charlotte Pipe and Foundry as a Controls Technician. One of the highlights of my time there has been helping them start their new plant in Oakboro, North Carolina.
+            Academic Background: I have an associate’s degree in Mechatronic from CPCC, which I earned while working part-time at the tire shop. I am currently working on a bachelor’s degree in Computer Science as a transfer student to further my skills.
+            Background in this Subject:  I’ve taken several computer science classes here at UNCC, but I’m hoping to strengthen my knowledge of the fundamentals. 
+            Primary Computer Platform: Windows laptop.
+            Courses I'm in & Why:
+            ITSC1110 - Computer Science Principles - I’m using this class to meet my credit requirements, but I specifically chose it because it relates to my degree.
+            ANTH1501 - Intro to Anthropology - I have completed all the general education requirements for my degree, but I still need to meet the remaining credit requirements.
+            ITCS3156 - Intro to Machine Learning - This is both a requirement for my degree and something I’m genuinely interested in.
+            ITSC2181 - Intro to Computer Systems - This is a requirement for my degree.
+            ITSC3155 - Software Engineering - This is a requirement for my degree.
+            Funny/Interesting Item about Yourself: I learned to ride motorcycles when I was 16 years old. 
+            I'd also like to Share: In high school, I played soccer and football, and I was also on the robotics team.</p>
     </main>
     <footer>
         <p>Site designed by <em>Hauser Enterprises</em> &copy;2025</p>
