--- a/itsc1110/index.html
+++ b/itsc1110/index.html
@@ -14,7 +14,15 @@
     </header>
     <main>
         <h2>Home</h2>
-        <p>Welcome to my ITSC1110 course page!</p>
+        <figure>
+            <img src="images/claus.JPG" alt="Sleepy Orange Cat" width="400">
+            <figcaption>Enjoy this picture of my sleepy cat, Claus!</figcaption>
+        </figure>
+        <p>Welcome to my ITSC1110 course page! Here you can learn more about me, my interests, and the work I'm doing. Feel free to explore the links. 
+            Check out my <strong>Introduction page</strong> to get to know me better, take a look at what I've been working on with <strong>AI tools</strong>, 
+            and review my <strong>Course Contract</strong> for this class.
+        </p>
+        
     </main>
     <footer>
         <p>Site designed by <em>Hauser Enterprises</em> &copy;2025</p>
