--- a/itsc1110/index.html
+++ b/itsc1110/index.html
@@ -15,7 +15,7 @@
     <main>
         <h2>Home</h2>
         <figure>
-            <img src="images/claus.JPG" alt="Sleepy Orange Cat" width="400">
+            <img src="images/claus.jpg" alt="Sleepy Orange Cat" width="400">
             <figcaption>Enjoy this picture of my sleepy cat, Claus!</figcaption>
         </figure>
         <p>Welcome to my ITSC1110 course page! Here you can learn more about me, my interests, and the work I'm doing. Feel free to explore the links. 
