--- a/itsc1110/introduction.html
+++ b/itsc1110/introduction.html
@@ -16,7 +16,7 @@
         <h2>Introduction</h2>
         <h3>Haylee Hauser | Hungry Hippo</h3>
         <figure>
-            <img src="images/mugshot.JPG" alt="LinkedIn Profile Picture" width="200">
+            <img src="images/mugshot.jpg" alt="LinkedIn Profile Picture" width="200">
             <figcaption>LinkedIn Profile Picture</figcaption>
         </figure>
         <ul>
